# legalcheck

./: .gitignore  README.md  test_tmpl.py
.agent/rules/: sssssmmm.md
backend/: Dockerfile  README.md  database.py  ingest.py  legalcheck.db  main.py  models.py  pyproject.toml  rag.py  requirements.txt  schemas.py  test_agent.py  test_api.py  test_api_1.py  test_api_debug.py  test_context.py  test_hook.py  test_output_hook.py  test_plugin.py
backend/app/: main.py
backend/app/api/: admin.py  endpoints.py
backend/app/core/: auth.py  config.py  container.py  database.py  llm.py
backend/app/models/: __init__.py  law.py
backend/app/plugins/: __init__.py  calculator.py  law_db.py  precedent_search.py
backend/app/schemas/: __init__.py  law.py  template.py
backend/app/services/: agent_service.py  check_service.py  context_service.py  hook_service.py  ingest_service.py  pdf_ingest_service.py  prompts.py  rag_service.py  template_service.py  verdict_utils.py  vision_service.py
backend/chroma_db/: chroma.sqlite3
backend/scripts/: init_laws.py  migrate_db.py
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  manifest.ts  page.tsx
frontend/src/app/api/auth/[...nextauth]/: route.ts
